[package]
name = "kokoro-micro"
version = "1.0.1"
edition = "2021"
authors = ["Hue & Aye <team@8b.is>", "David Valin <hola@davidvalin.com>", "mik-tf"]
description = "Minimal TTS crate using Kokoro - perfect for embedding in other apps"
license = "Apache-2.0"
homepage = "https://github.com/DavidValin/kokoro-micro"
repository = "https://github.com/DavidValin/kokoro-micro"
documentation = "https://docs.rs/kokoro-micro"
readme = "README.md"
keywords = ["tts", "text-to-speech", "kokoro", "audio", "voice"]
categories = ["multimedia::audio", "multimedia"]
exclude = ["*.wav", "*.mp3", "*.opus", "*.flac", "target/", ".git/", ".DS_Store", "0.onnx", "0.bin", "models/"]
include = ["src/**/*", "Cargo.toml", "LICENSE", "README.md", "examples/**/*", "assets/fallback.wav"]

[dependencies]
# Core ONNX Runtime for model inference
ort = { version = "2.0.0-rc.11", features = ["ndarray"] }

# Essential for text processing and audio
espeak-rs = "0.1.9"
hound = "3.5.1"  # WAV support built-in
ndarray = "0.17.2"
ndarray-npy = "0.10.0"

# Minimal async support for downloading model
tokio = { version = "1.45", features = ["fs", "rt"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[features]
cuda = ["ort/cuda"]

[[example]]
name = "simple"

[dev-dependencies]
tokio = { version = "1.45", features = ["rt-multi-thread", "macros"] }

[lints.rust]
dead_code = "allow"
unused_variables = "allow"
unused_imports = "allow"
